Refactor: import controllers in index and module

--- a/app/index.html
+++ b/app/index.html
@@ -91,10 +91,47 @@
 
   <script type="text/javascript" src="js/app.js"></script>
   <script type="text/javascript" src="js/services.js"></script>
-  <script type="text/javascript" src="js/controllers.js"></script>
   <script type="text/javascript" src="js/filters.js"></script>
   <script type="text/javascript" src="js/messages_manager.js"></script>
-
+  
+  
+  <script type="text/javascript" src="js/controllers/welcome.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/login.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/im.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/im-dialogs.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/im-history.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/im-panel.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/im-send.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/lang-select.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/footer.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/photo-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/user-pic-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/chat-pic-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/video-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/document-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/embed-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/game-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/user-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/chat-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/channel-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/settings-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/changelog-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/profile-edit-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/username-edit-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/sessions-list-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/password-update-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/password-recovery-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/contacts-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/peer-select.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/chat-create-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/chat-edit-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/channel-edit-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/chat-invite-link-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/import-contact-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/country-select-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/phonebook-modal.controller.js"></script>
+  <script type="text/javascript" src="js/controllers/stickerset-modal.controller.js"></script>
+  
   <!--PRODUCTION_ONLY_BEGIN
     <script type="text/javascript" src="js/templates.js"></script>
   PRODUCTION_ONLY_END-->
